dnl Process this file with autoconf to produce a configure script.

AC_INIT(holomni_pcv, 0.1, info@holomni.com)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR(src)
AM_INIT_AUTOMAKE

AM_CONFIG_HEADER(config.h)
AC_PROG_CXX
AC_PROG_CC
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

AC_OUTPUT( Makefile src/Makefile)


